force-app/main/default/objects/vlocity_cmt__AsyncProcess__c/vlocity_cmt__AsyncProcess__c.object-meta.xml
<CustomObject>
    <description>Async Engine overall details</description>
    <label>Async Process</label>
    <nameField>
        <label>Async Process Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Async Processes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>