force-app/main/default/objects/vlocity_cmt__AsyncProcess__c/fields/vlocity_cmt__AdditionalData__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__AdditionalData__c</fullName>
    <description>Global data used by the custom processes.</description>
    <label>Additional Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>