force-app/main/default/objects/vlocity_cmt__AsyncProcess__c/fields/vlocity_cmt__AsyncProcessSteps__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__AsyncProcessSteps__c</fullName>
    <description>Async Process and Steps details (JSON).</description>
    <label>Async Process Steps</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>