force-app/main/default/objects/vlocity_cmt__AsyncProcess__c/fields/vlocity_cmt__CurrentStepNumber__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__CurrentStepNumber__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Step number which is executing.</description>
    <label>Current Step Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>