force-app/main/default/objects/vlocity_cmt__AsyncProcess__c/fields/vlocity_cmt__Message__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Message__c</fullName>
    <description>User-friendly overall information related to the Async Process.</description>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>