force-app/main/default/objects/vlocity_cmt__AsyncProcess__c/fields/vlocity_cmt__ReferenceId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__ReferenceId__c</fullName>
    <description>An identifier provided by the Async Engine client (e.g. an external ID).</description>
    <externalId>true</externalId>
    <label>Reference Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>