force-app/main/default/objects/vlocity_cmt__AsyncProcess__c/fields/vlocity_cmt__Status__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Status__c</fullName>
    <description>Status of the overall Async Process. If any child item failed then the status is failed.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>InProgress</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>InProgress-Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>