force-app/main/default/objects/vlocity_cmt__AsyncProcess__c/fields/vlocity_cmt__StepName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__StepName__c</fullName>
    <description>Custom Name of the Step currently executing.</description>
    <label>Step Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>