force-app/main/default/objects/vlocity_cmt__AsyncProcess__c/fields/vlocity_cmt__TotalNumberOfSteps__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__TotalNumberOfSteps__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total number of steps provided.</description>
    <label>Total Number Of Steps</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>