force-app/main/default/objects/vlocity_cmt__AsyncProcess__c/fields/vlocity_cmt__UUID__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__UUID__c</fullName>
    <description>Universally unique identifier</description>
    <externalId>true</externalId>
    <label>UUID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>