force-app/main/default/objects/vlocity_cmt__AsyncProcess__c/listViews/vlocity_cmt__All.listView-meta.xml
<ListView>
    <fullName>vlocity_cmt__All</fullName>
    <columns>NAME</columns>
    <columns>vlocity_cmt__Status__c</columns>
    <columns>vlocity_cmt__Message__c</columns>
    <columns>vlocity_cmt__CurrentStepNumber__c</columns>
    <columns>vlocity_cmt__StepName__c</columns>
    <columns>vlocity_cmt__TotalNumberOfSteps__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>